Finished restyling offer component on single nft page

--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -162,6 +162,14 @@
   }
 }
 
+.icon--globe {
+  @include theme-aware('background-image', 'icon-globe');
+}
+
+.icon--place {
+  @include theme-aware('background-image', 'icon-place');
+}
+
 .icon--tn {
   width: 12px;
   height: 12px;
