--- a/styles/singleOffer/_header.scss
+++ b/styles/singleOffer/_header.scss
@@ -58,6 +58,7 @@
 }
 
 .nft-info-name {
+  margin-left: 25px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -98,7 +99,17 @@
   @include theme-aware('background-color', 'single-offer-meta-bg');
   @include theme-aware('color', 'color-content');
   border-radius: 9px;
-  padding: 17px 20px;
+  padding: 17px 10px;
+
+  display: grid;
+  grid-template-columns: 0.5fr 6fr;
+
+  &__icons {
+    margin-top: -8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
   .metadata-line {
     display: flex;
