--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -30,6 +30,7 @@
   animation: fadeInAnimation ease 0.8s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  margin-bottom: -6px;
 
   p {
     font-size: 12px;
@@ -52,23 +53,35 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 19px;
+  padding-bottom: 10px;
+
+  .offer-ID {
+    display: flex;
+
+    p,
+    div {
+      font-size: 12px;
+    }
+
+    div {
+      margin-left: 2px;
+      @include theme-aware('color', 'lightbox-currency-color');
+      .show-on-hover__elements__wrap {
+        i {
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+  }
 }
 
 .offer-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 100%;
-
-  .info-item:nth-child(2) {
-    padding-left: 16px;
-  }
-}
-
-.info-item {
-  .item-box:nth-child(1) {
-    padding-bottom: 16px;
-  }
+  grid-template-rows: 1fr 1fr;
+  gap: 20px 0px;
+  width: 70%;
 }
 
 .offer-lend {
@@ -82,7 +95,7 @@
 
 .lend-btn {
   width: 100%;
-  height: 38px;
+  height: 50px;
   @include theme-aware('background-color', 'color-primary');
   font-family: 'Red Hat Display', sans-serif;
   font-weight: $wg-hv;
@@ -91,7 +104,7 @@
   border-radius: 6px;
   cursor: pointer;
   transition: background 0.3 ease-in-out;
-
+  padding: 20px 0px;
   &:hover {
     @include theme-aware('background-color', 'color-primary-dark');
   }
