--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -26,7 +26,7 @@
     border-radius: $brd-rds-sm;
     -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-    @include theme-aware("background-color", "bg-table-hover");
+    @include theme-aware('background-color', 'bg-table-hover');
   }
 
   .offers-grid-item {
@@ -65,14 +65,32 @@
         /* The fourth layer shadow */ 0 24px 1px -12px rgba(0, 0, 0, 0.15);
     }
 
+    .owner-indicator {
+      margin: -15px 0 0 -15px;
+      position: absolute;
+      width: 32px;
+      height: 32px;
+      @include theme-aware('background-color', 'color-primary');
+      border-radius: 50%;
+      z-index: 10000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      i {
+        width: 25px;
+        height: 25px;
+      }
+    }
+
     .hover-data {
       position: absolute;
       display: flex;
       width: 100%;
       bottom: 0;
       left: 0;
-      @include theme-aware("background-color", "bg-overlay-bright");
-      @include theme-aware("color", "color-label");
+      @include theme-aware('background-color', 'bg-overlay-bright');
+      @include theme-aware('color', 'color-label');
       z-index: 1;
       padding: 20px;
       justify-content: space-evenly;
@@ -127,8 +145,8 @@
       z-index: 1;
       width: 100%;
       height: 100%;
-      @include theme-aware("color", "color-label");
-      @include theme-aware("background-color", "bg-overlay-bright");
+      @include theme-aware('color', 'color-label');
+      @include theme-aware('background-color', 'bg-overlay-bright');
       font-size: $tp-md;
       transition: opacity 0.5s;
 
@@ -152,18 +170,18 @@
         }
       }
       & button {
-        @include theme-aware("background-color", "color-primary");
+        @include theme-aware('background-color', 'color-primary');
         border: none;
         border-radius: 6px;
         padding: 12px 0;
-        @include theme-aware("color", "color-label");
+        @include theme-aware('color', 'color-label');
         font-weight: 700;
         align-self: center;
         width: 75%;
         cursor: pointer;
 
         &:hover {
-          @include theme-aware("background-color", "color-primary-dark");
+          @include theme-aware('background-color', 'color-primary-dark');
         }
       }
     }
@@ -329,4 +347,3 @@
     }
   }
 }
-
