--- a/styles/myOffers/_myOffersNftList.scss
+++ b/styles/myOffers/_myOffersNftList.scss
@@ -293,40 +293,6 @@
         @include theme-aware('color', 'lend-offer-button');
       }
     }
-
-    // .nft__offer-item {
-    //   @include theme-aware('border-color', '');
-    //   display: flex;
-    //   flex-direction: column;
-    //   align-items: center;
-    //   justify-content: center;
-
-    //   .btn {
-    //     width: 100%;
-    //     justify-content: center;
-    //     margin-left: 20px;
-    //     margin-bottom: 15px;
-
-    //     @media (max-width: $bp-tablet) {
-    //       margin-left: 0;
-    //     }
-
-    //     &:last-child {
-    //       margin-bottom: 0;
-    //     }
-    //   }
-
-    //   @media (max-width: $bp-tablet) {
-    //     margin: 10px 0 10px 0;
-    //     padding: 0 0 20px 0;
-    //     border-bottom: 1px solid;
-    //     border-right: none;
-    //   }
-    // }
-
-    // .nft__offer-item:last-child {
-    //   border: none;
-    // }
   }
 
   .my-offers-no__offers {
@@ -367,5 +333,118 @@
 
   &__id {
     @include theme-aware('background', 'myOffers-id-bg');
+  }
+}
+
+.nft-deposited {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 40px 0 60px 0;
+
+  @media (max-width: $bp-tablet) {
+    flex-direction: column;
+    align-items: center;
+    padding: 0px 20px;
+  }
+}
+
+.nft-deposited-item {
+  @include theme-aware('background', 'myOffers-subOffer-bg');
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(4px);
+  border-radius: $brd-rds-2tn;
+  width: 49%;
+  padding: 24px 24px 0 24px;
+  margin-bottom: 20px;
+
+  @media (max-width: $bp-tablet) {
+    width: 90%;
+  }
+
+  &__row {
+    @include theme-aware('color', 'myOffers-nftName-color');
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+
+    img {
+      border-radius: $brd-rds-sm;
+    }
+
+    button {
+      border-radius: $brd-rds-2tn;
+      width: 48%;
+      display: flex;
+      justify-content: center;
+    }
+
+    button:first-child {
+      background: rgba(0, 0, 0, 0);
+    }
+
+    button:last-child {
+      border: 0px;
+      @include theme-aware('color', 'lend-offer-button');
+    }
+  }
+
+  &__row:first-child {
+    justify-content: flex-start;
+    p {
+      margin-left: 15px;
+    }
+  }
+
+  .buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .row--item {
+    text-align: center;
+
+    div {
+      width: 80px;
+      text-align: center;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .mint,
+    .id,
+    .collection {
+      margin-top: 5px;
+      width: 160px;
+      height: 30px;
+      text-align: center;
+      line-height: 30px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      border-radius: $brd-rds-sm;
+      @include theme-aware('color', 'lend-offer-button');
+    }
+    .mint,
+    .collection {
+      @include theme-aware('background', 'myOffers-mint-bg');
+    }
+
+    .id {
+      @include theme-aware('background', 'myOffers-id-bg');
+    }
+  }
+}
+
+.active-offers--scrolldown {
+  h1 {
+    margin-left: 20px;
+    user-select: none;
+    :last-child {
+      margin-left: 20px;
+    }
   }
 }
