--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -74,6 +74,18 @@ $themes: (
     myOffers-subOffer-info-bg: #a189cd,
     myOffers-id-bg: rgba(224, 9, 126, 0.7),
     myOffers-mint-bg: #aa96d4,
+
+    disabled-color: #806baa,
+    disabled-bg: #a189cd,
+
+    time-green: #2c9c59,
+    time-yellow: #c23100,
+    time-yellow-btn: rgba(246, 161, 131, 0.78),
+    time-red: #fc005b,
+    time-red-btn: rgba(200, 66, 114, 0.25),
+    time-offer-green: linear-gradient(180deg, #80d3a1 0%, #b4ace2 100%),
+    time-offer-yellow: linear-gradient(180deg, #ed9678 0%, #b4ace2 100%),
+    time-offer-red: linear-gradient(180deg, #fc679c 0%, #b4ace2 100%),
   ),
   dark: (
     color-background: #210d48,
@@ -151,5 +163,17 @@ $themes: (
     myOffers-subOffer-info-bg: #2f175e,
     myOffers-id-bg: rgba(224, 9, 126, 0.7),
     myOffers-mint-bg: #532ba0,
+
+    disabled-color: #6944b4,
+    disabled-bg: #2f175d,
+
+    time-green: #00d756,
+    time-yellow: #eb683c,
+    time-yellow-btn: #b43105,
+    time-red: #ff005c,
+    time-red-btn: rgba(112, 0, 40, 0.25),
+    time-offer-green: linear-gradient(180deg, #166c38 0%, #2d1360 100%),
+    time-offer-yellow: linear-gradient(180deg, #ed693c 0%, #2d1360 100%),
+    time-offer-red: linear-gradient(180deg, #ff005c 0%, #2d1360 100%),
   ),
 );
