added styling for deactivated loan buttons, made loans give another subpage

--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -184,6 +184,13 @@
           @include theme-aware('background-color', 'color-primary-dark');
         }
       }
+
+      button.deactivated {
+        pointer-events: none;
+        cursor: not-allowed;
+        @include theme-aware('background-color', 'disabled-bg');
+        @include theme-aware('color', 'disabled-color');
+      }
     }
   }
 
