--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -112,5 +112,7 @@
   &.deactivated {
     pointer-events: none;
     cursor: not-allowed;
+    @include theme-aware('background-color', 'disabled-bg');
+    @include theme-aware('color', 'disabled-color');
   }
 }
