loans given restyle

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -41,8 +41,8 @@
 @import './lightboxBase';
 @import './NFTCollateral';
 @import './createLoan';
-@import './myOffers/connectWallet';
-@import './myOffers/myLendingList';
+@import './connectWallet';
+@import './loansGiven/myLendingList';
 @import './singleOffer/lendConfirmation';
 
 body {
