--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -78,14 +78,26 @@ $themes: (
     disabled-color: #806baa,
     disabled-bg: #a189cd,
 
-    time-green: #2c9c59,
-    time-yellow: #c23100,
-    time-yellow-btn: rgba(246, 161, 131, 0.78),
-    time-red: #fc005b,
-    time-red-btn: rgba(200, 66, 114, 0.25),
-    time-offer-green: linear-gradient(180deg, #80d3a1 0%, #b4ace2 100%),
-    time-offer-yellow: linear-gradient(180deg, #ed9678 0%, #b4ace2 100%),
-    time-offer-red: linear-gradient(180deg, #fc679c 0%, #b4ace2 100%),
+    time-green: #00d756,
+    time-yellow: #eb683c,
+    time-yellow-btn: #b43105,
+    time-red: #ff005c,
+    time-red-btn: rgba(112, 0, 40, 0.25),
+    time-offer-green: linear-gradient(180deg, #166c38 0%, #2d1360 100%),
+    time-offer-yellow: linear-gradient(180deg, #ed693c 0%, #2d1360 100%),
+    time-offer-red: linear-gradient(180deg, #ff005c 0%, #2d1360 100%),
+    timeLoan-green: #2c9c59,
+    timeLoan-yellow: #eb683c,
+    timeLoan-yellow-btn: rgba(174, 53, 12, 0.3),
+    timeLoan-red: #fe005b,
+    timeLoan-red-btn: rgba(112, 0, 40, 0.25),
+    timeLoan-offer-green: linear-gradient(180deg, #dad3ff 0%, #bce8ce 100%),
+    timeLoan-offer-yellow: linear-gradient(180deg, #dad3ff 0.02%, #ffbba4 100%),
+    timeLoan-offer-red: linear-gradient(180deg, #dad3ff 0%, #ff96bb 100%),
+    timeLoanDisabled-color: #cdc5e4,
+    myLoan-id-bg: #472ce2,
+    myLoan-mint-bg: #7f70df,
+    myLoan-header-color: #210d48,
   ),
   dark: (
     color-background: #210d48,
@@ -175,5 +187,17 @@ $themes: (
     time-offer-green: linear-gradient(180deg, #166c38 0%, #2d1360 100%),
     time-offer-yellow: linear-gradient(180deg, #ed693c 0%, #2d1360 100%),
     time-offer-red: linear-gradient(180deg, #ff005c 0%, #2d1360 100%),
+    timeLoan-green: #00d756,
+    timeLoan-yellow: #ea683c,
+    timeLoan-yellow-btn: rgba(180, 49, 5, 0.25),
+    timeLoan-red: #fc005b,
+    timeLoan-red-btn: rgba(112, 0, 40, 0.25),
+    timeLoan-offer-green: linear-gradient(180deg, #442482 0%, #2c765b 100%),
+    timeLoan-offer-yellow: linear-gradient(180deg, #442482 0%, #7e3a4b 100%),
+    timeLoan-offer-red: linear-gradient(180deg, #442482 0%, #7e1b5f 100%),
+    timeLoanDisabled-color: #5832a6,
+    myLoan-id-bg: rgba(71, 44, 226, 0.7),
+    myLoan-mint-bg: #532ba0,
+    myLoan-header-color: #ffffff,
   ),
 );
