--- a/styles/myOffers/_myOffersTop.scss
+++ b/styles/myOffers/_myOffersTop.scss
@@ -20,6 +20,7 @@
     h2 {
       margin: 0;
       padding: 0;
+      font-size: 48px;
 
       @media (max-width: $bp-tablet) {
         text-align: center;
