basic toaster redesign

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -199,5 +199,10 @@ $themes: (
     myLoan-id-bg: rgba(71, 44, 226, 0.7),
     myLoan-mint-bg: #532ba0,
     myLoan-header-color: #ffffff,
+
+    toaster-bg: #482688,
+    toaster-color: #00d756,
+    toaster-progress: #00d756,
+    toaster-progress-bg: rgba(0, 215, 86, 0.6),
   ),
 );
