--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,7 @@
 @import './mixins';
 @import './variables';
 @import './themes';
+@import './toasters';
 
 @import './_inputNumberArrows';
 @import './switchButton';
