--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -12,6 +12,10 @@
   background-image: url('/icons/nft-icon.svg');
 }
 
+.icon--info {
+  background-image: url('/icons/info-icon.svg');
+}
+
 .icon--share {
   background-image: url('/icons/share-icon.svg');
 
