--- a/styles/_walletAdapter.scss
+++ b/styles/_walletAdapter.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 .wallet-adapter-button {
+  @include theme-aware('color', 'color-content');
+  cursor: pointer;
   background-color: transparent;
   border: none;
   color: #fff;
-  cursor: pointer;
   display: flex;
   align-items: center;
   font-family: 'Open Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -18,6 +19,7 @@
 }
 
 .wallet-adapter-button-trigger {
+  @include theme-aware('color', 'color-white');
   background-color: #512da8;
 }
 
@@ -189,6 +191,7 @@
 }
 
 .wallet-adapter-modal-wrapper {
+  @include theme-aware('background-color', 'color-background');
   box-sizing: border-box;
   position: relative;
   display: flex;
@@ -251,6 +254,7 @@
 }
 
 .wallet-adapter-modal-list-more {
+  @include theme-aware('color', 'color-content');
   cursor: pointer;
   border: none;
   padding: 12px 24px 24px 12px;
@@ -262,8 +266,8 @@
 }
 
 .wallet-adapter-modal-list-more svg {
+  @include theme-aware('fill', 'color-content');
   transition: all 0.1s ease;
-  fill: rgba(255, 255, 255, 1);
   margin-left: 0.5rem;
 }
 
