--- a/styles/main.scss
+++ b/styles/main.scss
@@ -48,9 +48,6 @@
 
 body {
   @include theme-aware('background-color', 'color-background');
-  @include theme-aware('background-image', 'bg-home');
-  background-repeat: no-repeat;
-  background-position: top right;
   @include theme-aware('color', 'color-primary');
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
@@ -58,48 +55,89 @@ body {
   margin: 0px;
   width: 100%;
   transition: background 0.8s ease-in-out;
+  
+  &::after {
+    @include theme-aware('background-image', 'bg-gradient-home');
+    content: '';
+    position: fixed;
+    top: 0;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    transition: background 0.8s ease-in-out;
+  }
+
+  &::before {
+    @include theme-aware('background-image', 'bg-home');
+    content: '';
+    background-repeat: no-repeat;
+    background-position: top right;
+    position: fixed;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    transition: background 0.8s ease-in-out;
+  }
 }
 
 * {
   box-sizing: border-box;
 }
 
-.home-bg-bottom {
-  display: inline-block;
-
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  @include theme-aware('background-image', 'bg-home-bottom');
-  background-repeat: no-repeat;
-  background-position: bottom left;
-  z-index: -1;
+.devnet-container {
+  width: $pg-col;
+  margin: 0 auto;
+  padding-top: $mr-lg;
 
   @media (max-width: $bp-tablet) {
     width: 100vw;
-    height: 100vh;
+  }
+
+  .devnet {
+    @include theme-aware('color', 'color-white');
+    @include theme-aware('background-color', 'color-primary');
+    display: inline-flex;
+    align-items: center;
+    border-radius: 12px;
+    padding: 0 $mr-xl;
+
+    i {
+      margin-left: -25px;
+    }
   }
 }
 
+.home-bg-bottom {
+  @include theme-aware('background-image', 'bg-home-bottom');
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  transition: background 0.8s ease-in-out;
+}
+
 .theme-light {
-  body {
+  body::before {
     background-size: 40%;
   }
+
   .home-bg-bottom {
-    width: 916px;
-    height: 620px;
-    background-size: 40%;
+    background-size: 35%;
   }
 }
 
 .theme-dark {
-  body {
+  body::before {
     background-size: 30%;
   }
+
   .home-bg-bottom {
-    width: 1241px;
-    height: 748px;
-    background-size: 40%;
+    background-size: 30%;
   }
 }
 
