--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -84,13 +84,13 @@
     }
 
     .hover-data {
+      @include theme-aware('background-color', 'bg-overlay-bright');
+      @include theme-aware('color', 'color-white');
       position: absolute;
       display: flex;
       width: 100%;
       bottom: 0;
       left: 0;
-      @include theme-aware('background-color', 'bg-overlay-bright');
-      @include theme-aware('color', 'color-label');
       z-index: 1;
       padding: 20px;
       justify-content: space-evenly;
@@ -145,7 +145,7 @@
       z-index: 1;
       width: 100%;
       height: 100%;
-      @include theme-aware('color', 'color-label');
+      @include theme-aware('color', 'color-white');
       @include theme-aware('background-color', 'bg-overlay-bright');
       font-size: $tp-md;
       transition: opacity 0.5s;
@@ -169,16 +169,17 @@
           font-weight: 700;
         }
       }
-      & button {
+
+      button {
         @include theme-aware('background-color', 'color-primary');
+        @include theme-aware('color', 'color-white');
+        cursor: pointer;
         border: none;
         border-radius: 6px;
         padding: 12px 0;
-        @include theme-aware('color', 'color-label');
         font-weight: 700;
         align-self: center;
         width: 75%;
-        cursor: pointer;
 
         &:hover {
           @include theme-aware('background-color', 'color-primary-dark');
@@ -186,10 +187,10 @@
       }
 
       button.deactivated {
-        pointer-events: none;
-        cursor: not-allowed;
         @include theme-aware('background-color', 'disabled-bg');
         @include theme-aware('color', 'disabled-color');
+        cursor: not-allowed;
+        pointer-events: none;
       }
     }
   }
