--- a/styles/singleOffer/_lendConfirmation.scss
+++ b/styles/singleOffer/_lendConfirmation.scss
@@ -39,8 +39,8 @@
       }
 
       .nft-name {
+        @include theme-aware('color', 'color-white');
         margin-top: 5px;
-        @include theme-aware('color', 'color-label');
       }
     }
   }
