Changed colours in Offer Review Lightbox Collateral infopill

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -30,7 +30,7 @@ $themes: (
     info-red: #b82626,
     info-green: #7fbe20,
     icon-eye: url('/icons/eye-icon-white.svg'),
-    nft-pill-bg: #705ceb,
+    nft-pill-bg: #9480BF,
     input-number-bg: #ffffff,
     input-number-color: #210d48,
     input-number-button-bg: #e2d9f6,
