--- a/styles/main.scss
+++ b/styles/main.scss
@@ -48,37 +48,16 @@
 
 body {
   @include theme-aware('background-color', 'color-background');
+  @include theme-aware('background-image', 'bg-gradient-home');
   @include theme-aware('color', 'color-primary');
+  background-size: 100vw 100vh;
   font-family: 'Open Sans', sans-serif;
+  background-attachment: fixed;
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
   width: 100%;
   transition: background 0.8s ease-in-out;
-  
-  &::after {
-    @include theme-aware('background-image', 'bg-gradient-home');
-    content: '';
-    position: fixed;
-    top: 0;
-    z-index: -2;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    transition: background 0.8s ease-in-out;
-  }
-
-  &::before {
-    @include theme-aware('background-image', 'bg-home');
-    content: '';
-    background-repeat: no-repeat;
-    background-position: top right;
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    transition: background 0.8s ease-in-out;
-  }
 }
 
 * {
@@ -108,36 +87,45 @@ body {
   }
 }
 
+.home-bg-top,
 .home-bg-bottom {
-  @include theme-aware('background-image', 'bg-home-bottom');
   position: fixed;
-  bottom: 0;
-  left: 0;
   background-repeat: no-repeat;
-  background-position: bottom left;
-  z-index: -1;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
   transition: background 0.8s ease-in-out;
 }
 
+.home-bg-bottom {
+  @include theme-aware('background-image', 'bg-home-bottom');
+  background-position: bottom left;
+}
+
+.home-bg-top {
+  @include theme-aware('background-image', 'bg-home');
+  background-position: top right;
+}
+
 .theme-light {
-  body::before {
+  .home-bg-top {
     background-size: 40%;
   }
 
   .home-bg-bottom {
-    background-size: 35%;
+    background-size: 30%;
   }
 }
 
 .theme-dark {
-  body::before {
+  .home-bg-top {
     background-size: 30%;
   }
 
   .home-bg-bottom {
-    background-size: 30%;
+    background-size: 20%;
   }
 }
 
