Finished Custom Selects

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -49,6 +49,7 @@ $themes: (
     wallet-adapter-bg-hover: #d1c1f3,
     wallet-adapter-color: #210d48,
 
+    selected-option-bg: #D1C1F3,
     nft-offers-color: #2e13d2,
 
     icon-paginator-left: url('/icons/page-left-icon-light.svg'),
@@ -151,6 +152,7 @@ $themes: (
     wallet-adapter-color: #ffffff,
 
     nft-offers-color: #ffffff,
+    selected-option-bg: #3E1F78,
 
     icon-paginator-left: url('/icons/page-left-icon-dark.svg'),
     icon-paginator-right: url('/icons/page-right-icon-dark.svg'),
