--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
 @import './_inputNumberArrows';
 @import './switchButton';
 @import './currencyChanger';
+@import './_selects';
 
 @import './animations';
 @import './icons';
