--- a/styles/_NFTCollateral.scss
+++ b/styles/_NFTCollateral.scss
@@ -158,21 +158,17 @@
 }
 
 .sort-select {
-  border: 0;
-  @include theme-aware('background-color', 'lightbox-collection-select-bg');
   @include theme-aware('color', 'lightbox-collection-select-color');
+  border: 0;
   border-radius: 2px;
   width: 200px;
   font-size: 18px;
-  padding: 8px;
   appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  background-position: 95% 52%;
-  background-repeat: no-repeat;
+  margin-left: $mr-sm;
 
-  &:focus {
-    outline: none;
+  ul.custom-select__options li {
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 }
 
