--- a/styles/_filter.scss
+++ b/styles/_filter.scss
@@ -39,11 +39,11 @@
 
   .filter-minmax {
     .filter-line {
+      @include theme-aware('color', 'input-number-color');
       display: flex;
       justify-content: space-between;
       width: 100%;
       line-height: 30px;
-      @include theme-aware('color', 'input-number-color');
     }
 
     span {
@@ -51,19 +51,19 @@
     }
 
     input[type='number'] {
+      @include theme-aware('background-color', 'input-number-bg');
+      @include theme-aware('color', 'input-number-color');
       height: 28px;
       width: 80%;
       border-radius: $brd-rds-tn;
       border: 0px;
       margin-bottom: 10px;
       padding: 4px 8px;
-      @include theme-aware('background-color', 'input-number-bg');
-      @include theme-aware('color', 'input-number-color');
-      transition: outline 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
 
       &:focus {
-        outline-width: 1px;
         @include theme-aware('outline-color', 'color-label');
+        outline-width: 1px;
       }
     }
 
