--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -51,6 +51,7 @@ $themes: (
     wallet-adapter-color: #210d48,
 
     selected-option-bg: #D1C1F3,
+    hover-option-bg: rgba(243, 237, 255, 0.8),
     status-proposed-bg: rgba(44, 156, 89, 0.3),
     status-proposed-color: #2C9C59,
 
@@ -164,6 +165,7 @@ $themes: (
   
     nft-offers-color: #ffffff,
     selected-option-bg: #3E1F78,
+    hover-option-bg: rgba(76, 44, 135, 0.4),
 
     icon-paginator-left: url('/icons/page-left-icon-dark.svg'),
     icon-paginator-right: url('/icons/page-right-icon-dark.svg'),
