switch for theme finished

--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -178,6 +178,14 @@
   background-image: url('/icons/owner-icon.svg');
 }
 
+.icon--theme--moon {
+  background-image: url('/icons/theme-moon-icon.svg');
+}
+
+.icon--theme--sun {
+  background-image: url('/icons/theme-sun-icon.svg');
+}
+
 .icon--tn {
   width: 12px;
   height: 12px;
