--- a/styles/footer/_footer.scss
+++ b/styles/footer/_footer.scss
@@ -4,14 +4,18 @@
 }
 
 .footer {
-  width: 100%;
+  @include theme-aware('border-color', color-primary);width: $pg-col;
+
   display: flex;
   align-items: center;
   justify-content: center;
   border-top: 2px solid;
   padding: 20px 0 0 0;
-  margin: 70px 0 0 0;
-  @include theme-aware('border-color', color-primary);
+  margin: 70px auto $tp-3xl-mb auto;
+
+  @media (max-width: $bp-tablet) {
+    width: 100vw;
+  }
 }
 
 .footer-links {
