,essy tooltip rotating fix for not being able to use zindex

--- a/styles/_tooltip.scss
+++ b/styles/_tooltip.scss
@@ -126,24 +126,24 @@
 
 .active-offer--tooltip--parent {
   position: relative;
-
+  transform: rotate(180deg);
   &:hover {
     .active-offer--tooltip {
       display: block;
+      transform: rotate(180deg);
     }
   }
 }
 
-.active-offer--tooltip:before {
+.active-offer--tooltip:after {
   content: '';
   display: block;
   width: 0;
   height: 0;
   position: absolute;
-  border-top: 16px solid transparent;
-  border-bottom: 16px solid var(--tooltipBackground);
+  border-top: 16px solid var(--tooltipBackground);
+  border-bottom: 16px solid transparent;
   border-right: 16px solid transparent;
   border-left: 16px solid transparent;
   left: 133px;
-  top: -32px;
 }
