--- a/styles/_createLoan.scss
+++ b/styles/_createLoan.scss
@@ -47,10 +47,10 @@
 
   .input-text,
   select {
-    margin-top: 6px;
-    border: 0px;
     @include theme-aware('background-color', 'lightbox-collection-select-bg');
     @include theme-aware('color', 'lightbox-collection-select-color');
+    margin-top: 6px;
+    border: 0px;
     padding: 9px;
     border-radius: 6px;
     height: 42px;
@@ -79,37 +79,44 @@
   }
 
   .form-APR {
-    & > div:nth-child(1) {
-      width: 222px;
-      @media (max-width: $bp-tablet) {
-        width: 100%;
-      }
-    }
-
+    & > div:nth-child(1),
     & > div:nth-child(2) {
-      margin-top: 20px;
-      width: 203px;
-
-      @media (max-width: $bp-tablet) {
-        width: 100%;
-      }
+      width: 50%;
     }
+
     & p {
       font-size: 24px;
       width: 100%;
     }
   }
 
+  .form-repaid {
+    width: 100%;
+
+    .title {
+      font-size: 32px;
+    }
+
+    .amount {
+      font-size: 26px;
+
+      span {
+        margin-left: $mr-sm;
+        font-size: $tp-lg;
+      }
+    }
+  }
+
   button {
+    @include theme-aware('background-color', 'color-primary');
+    cursor: pointer;
     padding: 15px;
     text-align: center;
     margin: 0;
     display: flex;
     align-items: center;
-    @include theme-aware('background-color', 'color-primary');
     border: none;
     border-radius: 6px;
-    cursor: pointer;
     transition: background 0.3 ease-in-out;
 
     &:hover {
