Fixed background resize transition

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -58,7 +58,7 @@ body {
   padding: 0px;
   margin: 0px;
   width: 100%;
-  transition: background 0.8s ease-in-out;
+  transition: background-color 0.8s ease-in-out;
 }
 
 * {
