--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -16,6 +16,42 @@
   }
 }
 
+.offer-root--add-new {
+  height: 200px;
+  width: 406px;
+  border-radius: $brd-rds-2tn;
+  box-shadow: inset 0px 0px 14px rgba(0, 0, 0, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @include theme-aware('background', 'yourNFT-offer-bg');
+  cursor: pointer;
+
+  &__plus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include theme-aware('background', 'yourNFT-offer-plus-bg');
+    @include theme-aware('color', 'yourNFT-offer-plus-color');
+    cursor: pointer;
+
+    &:hover {
+      @include theme-aware('background', 'yourNFT-offer-plus-bg-hover');
+    }
+    .tooltip-container {
+      font-size: 14px;
+      text-align: center;
+      top: 80px;
+      left: -118px;
+    }
+  }
+}
+
 .offer-container {
   display: flex;
   flex-direction: column;
@@ -24,7 +60,7 @@
   @include theme-aware('background', 'single-offer-offer-bg');
   @include theme-aware('color', 'nft-offers-color');
   padding: 16px;
-  border-radius: 6px 6px 0 0;
+  border-radius: $brd-rds-2tn $brd-rds-2tn 0 0;
   cursor: pointer;
   transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   animation: fadeInAnimation ease 0.8s;
