--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -61,6 +61,8 @@ $themes: (
     icon-paginator-right: url('/icons/page-right-icon-light.svg'),
     pagination-color: white,
 
+    bg-input-disabled: #EBE2FF,
+
     lightbox-collection-border: #2e13d2,
     lightbox-collection-color: #210d48,
     lightbox-collection-select-bg: #ffffff,
@@ -200,6 +202,8 @@ $themes: (
     myOffers-subOffer-info-bg: #2f175e,
     myOffers-id-bg: rgba(224, 9, 126, 0.7),
     myOffers-mint-bg: #532ba0,
+
+    bg-input-disabled: #2F175D,
 
     disabled-color: #6944b4,
     disabled-bg: #2f175d,
