Simple fadeout for lightboxes on close

--- a/styles/_lightboxBase.scss
+++ b/styles/_lightboxBase.scss
@@ -50,3 +50,9 @@
   justify-items: center;
   @include theme-aware('color', 'color-label');
 }
+
+.lightbox-hiding {
+  animation: fadeOutAnimation ease 0.3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
