Add loading indicator for user lended offers

--- a/styles/loansGiven/_myLendingList.scss
+++ b/styles/loansGiven/_myLendingList.scss
@@ -16,6 +16,12 @@
   }
 }
 
+.my-lending-nft-list-loading {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .my-lending-nft-list.empty h1 {
   text-align: center;
 }
