--- a/styles/myOffers/_myOffersNftList.scss
+++ b/styles/myOffers/_myOffersNftList.scss
@@ -11,6 +11,10 @@
   display: flex;
   flex-direction: column;
   margin: 40px 0 60px 0;
+
+  &.hidden {
+    display: none;
+  }
 }
 
 .my-offers-nft {
@@ -392,6 +396,10 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 40px 0 60px 0;
+
+  &.hidden {
+    display: none;
+  }
 
   button {
     text-transform: uppercase;
