--- a/styles/_layoutTop.scss
+++ b/styles/_layoutTop.scss
@@ -3,6 +3,7 @@
   width: $pg-col;
   padding-top: 50px;
   justify-content: space-between;
+  align-items: center;
 
   @media (max-width: $bp-tablet) {
     flex-direction: column;
@@ -23,7 +24,6 @@
 
 .top-menu {
   display: flex;
-  margin: 10px 20px;
   padding: 0;
   list-style: none;
   justify-content: space-between;
