offer-cards: fixed border radius

--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -94,6 +94,7 @@
       z-index: 1;
       padding: 20px;
       justify-content: space-evenly;
+      border-radius: 0 0 8px 8px;
 
       .hover-data-item {
         display: flex;
