Disabling interest mode for now

--- a/styles/_createLoan.scss
+++ b/styles/_createLoan.scss
@@ -46,6 +46,10 @@
 
     .switch--button {
       align-self: flex-start;
+
+      &.disabled {
+        cursor: not-allowed;
+      }
     }
   }
 
