--- a/styles/_switchButton.scss
+++ b/styles/_switchButton.scss
@@ -1,9 +1,12 @@
 .switch--button {
     display: inline-block;
     border-radius: 50px;
-    width: 50px;
+    width: 60px;
     height: 26px;
-    @include theme-aware('background-color', 'input-number-bg');
+    border: 1px solid;
+    box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.25);
+    @include theme-aware('background-color', 'switch-bg');
+    @include theme-aware('border-color', 'switch-knob');
     position: relative;
     &:hover {
         cursor: pointer;
@@ -16,12 +19,12 @@
     width: 22px;
     border-radius: 50%;
     position: absolute;
-    top: 2px;
+    top: 1px;
     transition: left 0.2s ease-in-out;
     &.left {
-        left: 3px;
+        left: 1px;
     }
     &.right {
-        left: calc(100% - 3px - 22px);
+        left: calc(100% - 24px);
     }
 }
