Use the same bg for both light and dark mode

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -15,8 +15,8 @@ $themes: (
     color-border: #d0e5f2,
     color-input-text: #210d48,
     color-orange: #ed8e19,
-    bg-home: url('/home_bg.png'),
-    bg-home-bottom: url('/home_bg_bottom.png'),
+    bg-home: url('/home_bg2-dark.png'),
+    bg-home-bottom: url('/home_bg2-bottom-dark.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
     bg-table: rgba(243, 237, 255, 0.8),
     bg-table-hover: #e5d9ff,
