--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -110,12 +110,18 @@
           font-weight: $wg-bd;
         }
 
+        &:nth-child(1) {
+          flex: 1;
+        }
+
         &:nth-child(2) {
           text-align: center;
+          flex: 2;
         }
 
         &:last-child {
           text-align: right;
+          flex: 1;
         }
       }
     }
