--- a/styles/_userToolbox.scss
+++ b/styles/_userToolbox.scss
@@ -13,6 +13,7 @@
   flex-direction: column;
   margin-left: 20px;
   margin-top: -2px;
+  justify-content: center;
 
   &--header {
     display: flex;
