Add the missing btn class
Also removes the weird nth-child selector that was targeting a lot of elements it didn't need to. The gap property is there to seperate multiple sub-offers for the same collateral.

--- a/styles/myOffers/_myOffersNftList.scss
+++ b/styles/myOffers/_myOffersNftList.scss
@@ -182,10 +182,7 @@
     padding-top: 50px;
     display: flex;
     flex-wrap: wrap;
-
-    :nth-child(2n) {
-      margin-left: 2%;
-    }
+    gap: 20px;
 
     @media (max-width: $bp-tablet) {
       flex-direction: column;
