--- a/styles/mobile/_layoutTopMobile.scss
+++ b/styles/mobile/_layoutTopMobile.scss
@@ -1,16 +1,16 @@
 @media (max-width: $bp-phone) {
     .layout-top-mobile {
-        @include theme-aware("background-color", "bg-table-hover");
+        @include theme-aware('background-color', 'bg-table-hover');
         position: fixed;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         backdrop-filter: blur(7px);
-        border-radius: 0px 0px 8px 8px;   
+        border-radius: 0px 0px 8px 8px;
         transition: top 0.25s ease;
         width: 100vw;
         top: 0;
 
         &.hidden {
-            top: -200px;
+            top: -300px;
         }
     }
 
@@ -27,8 +27,8 @@
             line-height: 30px;
 
             &.active {
-                @include theme-aware("background-color", "bg-table-hover");
-                @include theme-aware("color", "color-label");
+                @include theme-aware('background-color', 'bg-table-hover');
+                @include theme-aware('color', 'color-label');
             }
         }
     }
@@ -38,12 +38,12 @@
         justify-content: space-between;
         display: flex;
         flex-direction: row-reverse;
-        padding: 0 0 0 20px;
+        padding: 14px 0 0 20px;
     }
 
     .wallet-adapter-button-trigger {
-        @include theme-aware("border-color", "color-primary");
-        @include theme-aware("box-shadow", "wallet-button-box-shadow");
+        @include theme-aware('border-color', 'color-primary');
+        @include theme-aware('box-shadow', 'wallet-button-box-shadow');
         width: 150px;
         height: 41px;
         background-color: rgba(0, 0, 0, 0);
@@ -58,14 +58,14 @@
     }
 
     .wallet-adapter-button-trigger:not([disabled]):hover {
-        @include theme-aware("background-color", "color-primary");
-        @include theme-aware("border-color", "color-primary");
-        @include theme-aware("box-shadow", "wallet-button-box-shadow");
+        @include theme-aware('background-color', 'color-primary');
+        @include theme-aware('border-color', 'color-primary');
+        @include theme-aware('box-shadow', 'wallet-button-box-shadow');
         border: 1px solid;
     }
 
     .theme-switcher {
-        margin: 8px 0 0 10px;
+        margin: 0 0 0 10px;
     }
 }
 
