--- a/styles/footer/_footer.scss
+++ b/styles/footer/_footer.scss
@@ -1,10 +1,6 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
 .footer {
-  @include theme-aware('border-color', color-primary);width: $pg-col;
+  @include theme-aware('border-color', color-primary);
+  width: $pg-col;
 
   display: flex;
   align-items: center;
